src/objects/Enrollment_Communications_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enrollment Communications Surveys</relationshipLabel>
        <relationshipName>Enrollment_Communications_Surveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Notice_of_Change_Content_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Notice of Change Content Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Communicates_by_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Communicates by Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Implementation_Manager__c</fullName>
        <formula>Account__r.Client_Implementation_Manager__r.FirstName +&apos; &apos;+ Account__r.Client_Implementation_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Implementation Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Sending_Announcement_DMM__c</fullName>
        <label>Client Sending Announcement DMM?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <label>Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Types_Provided_for_Enrollment__c</fullName>
        <label>Data Types Provided for Enrollment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email addresses</fullName>
                </value>
                <value>
                    <fullName>Mailing addresses</fullName>
                </value>
                <value>
                    <fullName>Mobile phone number</fullName>
                </value>
                <value>
                    <fullName>Home phone number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Communications_Survey_Type__c</fullName>
        <label>Enrollment Communications Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes Management</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>DPP/WM 2.0</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>DM + HTN</fullName>
                </value>
                <value>
                    <fullName>New Partners</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>Blue Cross and Blue Shield of IL, MT, NM, OK and TX</fullName>
                </value>
                <value>
                    <fullName>Cambia - Diabetes Management</fullName>
                </value>
                <value>
                    <fullName>Independence Blue Cross</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                    <isActive>false</isActive>
                    <label>Anthem</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Marketing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Communications_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Review_Timeline__c</fullName>
        <label>Estimated Review Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Population_Covered_Dependents__c</fullName>
        <label>Include Population &amp; Covered Dependents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_Annual_Enrollment_Consideration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicare Annual Enrollment Consideration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicare_Enrollment_Period_Notes__c</fullName>
        <label>Medicare Enrollment Period Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_specific_Medicare_Requirement_Notes__c</fullName>
        <label>Org-specific Medicare Requirement Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_specific_Medicare_Requireme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization-specific Medicare Requireme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_HR_Communication__c</fullName>
        <label>Other HR Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Populations_Excluded__c</fullName>
        <label>Populations Excluded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Status_Updated_Date__c</fullName>
        <label>Survey Status Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Resent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <formula>HYPERLINK($Label.Enrollment_Communications_Survey_Community_URL+Id, $Label.Enrollment_Communications_Survey_Community_URL+Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey URL</label>
        <type>Text</type>
    </fields>
    <label>Enrollment Communications Survey</label>
    <nameField>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Enrollment Communications Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Communications Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>